# AIDaily

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
AIDaily/: main.py
AIDaily/configs/: __init__.py  logging_config.py
AIDaily/constants/: __init__.py  constants.py
AIDaily/data/: index.json
AIDaily/data/papers/: 2025-08-16-2508.10875v1.json
AIDaily/routes/: __init__.py  v1_routes.py
AIDaily/schemas/: __init__.py  paper_schema.py
AIDaily/services/: __init__.py  arxiv_fetcher.py  process_pdf.py
AIDaily/static/: script.js  style.css
AIDaily/templates/: index.html
data/: index.json
data/papers/: 2025-08-16-2508.10880v1.json  2025-08-17-2508.10881v1.json  2025-08-17-9810017v1.json
docs/: index.md
tests/: test_arxiv_fetcher.py  test_main.py  test_process_pdf.py
utils/: __init__.py  category_shuffler.py  storage_helpers.py
