[project]
name = "aidaily"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "arxiv>=2.2.0",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.42.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 138
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "PLE",  "C901", "B", "S", "T"]
ignore = ["E101", "E402", "F841", "E731"]
unfixable = ["E101", "E402", "F841", "E731"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
